# live-update

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  Vagrantfile  app.c  blink.c  blink.h  config.cmake  main.c  main_ns.c  musca_ns.ld  pic.ld  update.c  update.h
app/: CMakeLists.txt  main.c
app/blinky/: CMakeLists.txt
app/blinky/src/: main.c
app/glucose_monitoring/: CMakeLists.txt
app/glucose_monitoring/src/: main.c
app/hello_world/: CMakeLists.txt
app/hello_world/src/: loader.c  main.c
app/include/: interface.h  pic.h
app/pacemaker/: CMakeLists.txt
app/pacemaker/src/: avi.c  lri.c  main.c  pacemaker.h  simple_pacemaker.c  vrp.c
app/pacemaker_asynchronous/: CMakeLists.txt
app/pacemaker_asynchronous/include/: interface.h
app/pacemaker_asynchronous/src/: main.c
app/pacemaker_sequential/include/: interface.h
app/pacemaker_sequential/src/: main.c
app/src/: loader.c
app/wind_turbine/: CMakeLists.txt
app/wind_turbine/src/: main.c
apps/: .gitignore
apps/archive/plc_4out_musca/: 4Outs.c
apps/archive/plc_4out_musca/_build/: lastFlashedNum.txt
apps/archive/plc_4out_musca/src/: plc_platform.c
apps/archive/plc_bottlewash_musca/_build/: lastFlashedNum.txt  plc_bottlewash_ns.elf
apps/archive/plc_led_blink_musca/: .gitignore  LEDtutorial.ld  symbols.txt
apps/archive/plc_led_blink_musca/_build/: lastFlashedNum.txt  plc_led_blink_ns.elf
apps/archive/plc_led_blink_musca/src/: README.md  plc_platform.c
apps/benchmark_testing/: Makefile
apps/benchmark_testing/src/: main.c
apps/benchmark_testing2/src/: main.c
apps/blinky/: CMakeLists.txt  Makefile
apps/glucose/: '  CONDENSED_UPDATE_RESULT  Makefile  README  combined_data_edited.csv  custom_transfer.py  data_processor.py  main1.c  main2.c  no_update.c  test.py  update.c
apps/glucose/archive/: COMPLETE_UPDATE_RESULT
apps/glucose/src/: data.h  data_processor.py  main  main.c  monitor.c  monitor.h  tmp_main.c
apps/glucose_monitoring/src/: main.c
apps/gpio_example/: Makefile  custom_transfer.py
apps/gpio_example/src/: main.c
apps/gpio_interrupt/src/: main.c
apps/gpio_interrupt_example/src/: main.c
apps/hello_world/: CMakeLists.txt  Makefile
apps/hello_world/src/: main.c
apps/include/: interface.h
apps/nrf_hifreq_timer_ex/: Makefile  main.c
apps/nrf_plc_blink/: README.md  ladder.c  ladder.h  main.c
apps/pacemaker/: custom_transfer.py  no_vrp_main.c  updated_vrp_main.c
apps/pacemaker/include/: pacemaker.h
apps/pacemaker/src/: avi.c  lri.c  main.c  vrp.c
apps/pacemaker/testing/: Makefile  README.md  clean_data.py  custom_transfer.py  gen_tests.py  gen_tests1.py  main.c  no_vrp_main.c  normal_e2e_test.sh  pred_e2e_test.sh  summarize_results.py  test_cases.h  test_cases1.h  test_cases2.h  update_e2e_test.sh  updated_vrp_main.c  write_e2e_test.sh
apps/pacemaker/testing/_build/: SEGGER_RTT.d  SEGGER_RTT_Syscalls_GCC.d  SEGGER_RTT_printf.d  app_error.d  app_error_handler_gcc.d  app_error_weak.d  (+57 more)
apps/plc_4out/: 4Outs.ld  4Outs_v1.c
apps/plc_4out/inc/: ladder.h  plc_platform.h
apps/plc_4out/src/: 4Outs.c  4Outs_v2.c  ladder.c  plc_platform.c
apps/plc_4out_test/src/: main.c
apps/plc_blink/: README.md  custom_transfer.py  main1.c  main2.c  myupdate.c  no_update_main.c  update.c
apps/plc_blink/inc/: ladder.h  plc_platform.h
apps/plc_blink/src/: ladder.c  main.c  plc_platform.c
apps/plc_blink/temp_archive/: LEDtutorial.c  ladder.c  out  out.json  plc_platform.c  plc_platform.h
apps/plc_blink_test/: Makefile
apps/plc_blink_test/src/: main.c
apps/plc_bottlewash/: BottleWash.ld  Makefile  io_behavior.md
apps/plc_bottlewash/inc/: ladder.h
apps/plc_bottlewash/src/: BottleWash.c  ladder.c  main.c
apps/plc_bottlewash_test/src/: main.c
apps/plc_led_blink/: README.md
apps/plc_led_blink/include/: ladder.h  plc_platform.h
apps/plc_led_blink/src/: LEDtutorial.c  README.md  ladder.c  ladder.h  main.c  plc_platform.c  plc_platform.h
apps/simple_pacemaker/: Makefile
apps/simple_pacemaker/src/: main.c
apps/timer_example/: Makefile
apps/timer_example/src/: main.c
apps/wind_turbine/: CMakeLists.txt  discon.c
boards/: .gitignore
boards/musca_a/: Board.mk  Program.mk
boards/nrf9160/: Board.mk  Program.mk
bootloader/: .gitignore  CMakeLists.txt
bootloader/bootutil/src/: bootutil_misc.c  bootutil_priv.h  image_validate.c  loader.c
bootloader/include/: boot_record.h
bootloader/src/: bl2_main.c  boot_record.c  flash_map.c
cmake/: config.cmake  flash.sh  pic.ld
ext/: .gitignore
libgcc/: Makefile  README.md  build.sh
make/: AppMakefile.mk  Configuration.mk  app-prj-no-linker.conf  app-prj.conf  app-sections.ld  build_mbedtls.cmake  bump_version.py  debug.gdb  gen_prj_conf.py  gen_update_manifest.py  gen_zephyr_cmake.py  local_config.make  pic.cmake  project_config.cmake  zephyr_cmake_gen.py
make/ld/: app_section.ld  pic.ld
make/scripts/: relocate_extern_fns.py  relocated.elf
newlib/: Makefile  README.md  build.sh
scripts/: bl_util.py  control.py  dot2png.sh  gen_app_graph.py  gen_predicates.py  gen_transfer.py  plots.ipynb  relocate.py  relocate_extern_fns.py  repeat_update.py  save_update_info.py  term.py  test.elf  timer_graph.py  update.py  update_deps.sh  vagrant.sh  viz.html
scripts/.ipynb_checkpoints/: plots-checkpoint.ipynb
scripts/archive/: relocate.py  save_update.sh
scripts/csvdata/: pacemaker.csv  pacemaker2.csv  plc 2.csv  plc.csv  plc_response.csv
scripts/data/: pacemaker.json  test_graph.json
sdk/: CMakeLists.txt
sdk/musca_a/include/: gpio_cmsdk_drv.h  target_cfg.h
sdk/musca_a/src/: Driver_USART.c  attest_hal.c  dummy_boot_seed.c  dummy_crypto_keys.c  dummy_device_id.c  dummy_nv_counters.c  gpio_cmsdk_drv.c  spm_hal.c  target_cfg.c  tfm_platform_system.c  uart_pl011_drv.c
sdk/tfm/include/: tfm_boot_status.h  tfm_secure_api.h  tfm_spm_hal.h
sdk/tfm/src/: tfm_boot_data.c  tfm_core.c  tfm_handler.c  tfm_initial_attestation_key_material.c  tfm_spm_services.c
secure/: CMakeLists.txt  main.c  sgpio.c
secure/include/: sgpio.h
startup/: CMakeLists.txt  startup_cmsdk_musca_s.S
(+194 files in other folders)
